<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.vijaya.myorder.MainActivity">

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16sp"
            android:layout_marginBottom="16sp"
            android:layout_marginTop="16sp"
            android:text="Ingredients" />

        <CheckBox
            android:id="@+id/whipped_cream_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:minHeight="48dp"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:minHeight="48dp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="171dp"
            android:layout_height="30dp"
            android:text="@string/toppings"
            android:minHeight="48dp"
            android:paddingLeft="24dp"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/olives_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:minHeight="48dp"
            android:paddingLeft="24dp"
            android:text="@string/olives"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/corn_checked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:minHeight="48dp"
            android:paddingLeft="24dp"
            android:text="@string/corn"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-"
                android:textColor="#795548"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/quantity_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="257dp"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_order"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:layout_weight="1"
                android:onClick="submitOrder"
                android:text="@string/order" />

            <Button
                android:id="@+id/button_summary"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Summary" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="124dp"
            android:layout_height="35dp"
            android:text="Gracias !!" />

    </LinearLayout>
</ScrollView>